--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="container">
+
+      <div>cabecera</div>
+     
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>
