cambios a la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container">
 
-      <div>cabecera</div>
+      <div id="cabecera">Cabecera HyperBlog</div>
      
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
