--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,9 @@
           y este es el parrafo de inicio donde vamos a explicar las cosas
           increibles que se pueden hacer con ramas
         </p>
+        <p>
+          Nuevo parrafo de contenido
+        </p>
       </div>
     </div>
   </body>
